[package]
name = "activate-stylus-program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.7.7"
alloy-sol-types = "0.7.7"
clap = { version = "4.5.10", features = ["derive", "color"] }
ethers = "2.0.14"
eyre = "0.6.12"
hex = "0.4.3"
lazy_static = "1.5.0"
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
